@@ -1,6 +1,12 @@
 Paste Deployment News
 =====================
 
+svn trunk
+---------
+
+* Added ``scheme`` option to ``PrefixMiddleware``, so you can force a
+  scheme (E.g., when proxying an HTTPS connection over HTTP).
+
 1.1
 ---
 
